import java.util.*;

public class Achievement {
    private String id;
    private String key;
    private String name;
    private String description;
    private String icon;
    private String category;
    private Integer tier;
    private Integer xpReward;
    private Integer order;
    private Date createdAt;
    private List<UserAchievement> userAchievements;
}
