import java.util.*;

public class CardTypeField {
    private String id;
    private String cardTypeId;
    private String name;
    private Integer order;
    private String description;
    private String fieldType;
    private Date createdAt;
    private CardType cardType;
}
