import java.util.*;

public class Deck {
    private String id;
    private String userId;
    private String name;
    private Date createdAt;
    private Date updatedAt;
    private User user;
    private List<Flashcard> flashcards;
}
