import java.util.*;

public class DictationVideo {
    private String id;
    private String userId;
    private String title;
    private String youtubeVideoId;
    private String audioUrl;
    private String imageUrl;
    private List<String> tags;
    private String folder;
    private String category;
    private String duration;
    private Object sentences;
    private String status;
    private Date createdAt;
    private Date updatedAt;
    private User user;
}
