import java.util.*;

public class ExamSession {
    private String id;
    private String userId;
    private String examId;
    private SessionStatus status;
    private Object answers;
    private Integer timeTaken;
    private Integer practicePart;
    private Date startedAt;
    private Date submittedAt;
    private Date createdAt;
    private Date updatedAt;
    private User user;
    private Exam exam;
    private Result result;
}
