import java.util.*;

public class LearningProgress {
    private String id;
    private String userId;
    private String materialId;
    private Integer progress;
    private Boolean completed;
    private Date lastAccess;
    private Date createdAt;
    private Date updatedAt;
    private User user;
    private LearningMaterial material;
}
