import java.util.*;

public class PostBookmark {
    private String id;
    private String postId;
    private String userId;
    private Date createdAt;
    private Post post;
    private User user;
}
