import java.util.*;

public class PricingPlan {
    private String id;
    private SubscriptionTier tier;
    private String name;
    private String description;
    private Integer priceAmount;
    private String currency;
    private String interval;
    private Integer intervalCount;
    private Object features;
    private Boolean isActive;
    private Integer order;
    private Date createdAt;
    private Date updatedAt;
}
