import java.util.*;

public class QuestionNote {
    private String id;
    private String userId;
    private String examId;
    private Integer questionNumber;
    private String noteText;
    private Date createdAt;
    private Date updatedAt;
    private User user;
}
