import java.util.*;

public class Result {
    private String id;
    private String userId;
    private String sessionId;
    private Double totalScore;
    private Integer readingScore;
    private Integer listeningScore;
    private Double speakingScore;
    private Double writingScore;
    private Object feedback;
    private Date gradedAt;
    private Date createdAt;
    private Date updatedAt;
    private User user;
    private ExamSession session;
}
