import java.util.*;

public class ShadowingFolder {
    private String id;
    private String userId;
    private String name;
    private Integer order;
    private User user;
}
