import java.util.*;

public class User {
    private String id;
    private String email;
    private String password;
    private String googleId;
    private String avatar;
    private String firstName;
    private String lastName;
    private UserRole role;
    private Boolean isActive;
    private Date createdAt;
    private Date updatedAt;
    private List<ExamSession> examSessions;
    private List<Result> results;
    private List<LearningProgress> progress;
    private List<FoundationPronunciationAttempt> pronunciationAttempts;
    private List<FoundationPronunciationProgress> pronunciationProgress;
    private List<FoundationVocabProgress> vocabularyProgress;
    private List<FoundationGrammarProgress> grammarProgress;
    private List<Deck> decks;
    private List<SharedDeck> sharedDecks;
    private List<QuestionNote> questionNotes;
    private List<ShadowingVideo> shadowingVideos;
    private List<ShadowingFolder> shadowingFolders;
    private List<ShadowingProgress> shadowingProgress;
    private List<DictationVideo> dictationVideos;
    private List<DictationFolder> dictationFolders;
    private List<DictationProgress> dictationProgress;
    private List<IeltsBasicProgress> ieltsBasicProgress;
    private List<IeltsBasicWritingAnswer> ieltsWritingAnswers;
    private List<IeltsAdvancedListeningSession> practiceSessions;
    private List<IeltsAdvancedReadingSession> practiceReadingSessions;
    private List<IeltsAdvancedWritingSession> advancedWritingSessions;
    private List<IeltsAdvancedSpeakingSession> advancedSpeakingSessions;
    private List<UserAchievement> userAchievements;
    private List<XpLog> xpLogs;
    private IeltsProfile ieltsProfile;
    private List<StudentTeacherLink> teacherLinks;
    private List<StudentTeacherLink> studentLinks;
    private List<Notification> notifications;
    private List<Post> posts;
    private List<Comment> comments;
    private List<PostLike> postLikes;
    private List<PostBookmark> bookmarks;
    private Subscription subscription;
}
