public enum UserRole {
    STUDENT,
    ADMIN,
    INSTRUCTOR
}
