classDiagram
    %% ══════════════ User & Auth ══════════════
    class User {
        -id : String
        -email : String
        -password : String
        -googleId : String
        -avatar : String
        -firstName : String
        -lastName : String
        -role : UserRole
        -isActive : Boolean
        -createdAt : Date
        -updatedAt : Date
    }
    class UserRole {
        <<enumeration>>
        STUDENT
        ADMIN
        INSTRUCTOR
    }
    User ..> UserRole

    %% ══════════════ Exam & Assessment ══════════════
    class Exam {
        -id : String
        -title : String
        -description : String
        -imageUrl : String
        -duration : Int
        -type : ExamType
        -difficulty : Difficulty
        -isPublished : Boolean
        -questions : Object
        -createdAt : Date
        -updatedAt : Date
    }
    class ExamSession {
        -id : String
        -userId : String
        -examId : String
        -status : SessionStatus
        -answers : Object
        -timeTaken : Int
        -practicePart : Int
        -startedAt : Date
        -submittedAt : Date
        -createdAt : Date
        -updatedAt : Date
    }
    class Result {
        -id : String
        -userId : String
        -sessionId : String
        -totalScore : Float
        -readingScore : Int
        -listeningScore : Int
        -speakingScore : Float
        -writingScore : Float
        -feedback : Object
        -gradedAt : Date
        -createdAt : Date
        -updatedAt : Date
    }
    class ExamType {
        <<enumeration>>
        FULL_TEST
        READING
        LISTENING
        SPEAKING
        WRITING
        PRACTICE
    }
    class Difficulty {
        <<enumeration>>
        BEGINNER
        INTERMEDIATE
        ADVANCED
    }
    class SessionStatus {
        <<enumeration>>
        IN_PROGRESS
        SUBMITTED
        GRADING
        GRADED
        COMPLETED
        ABANDONED
        GRADING_FAILED
    }
    Exam "1" -- "0..*" ExamSession
    ExamSession "1" -- "0..*" Result
    Exam ..> ExamType
    Exam ..> Difficulty
    ExamSession ..> SessionStatus

    %% ══════════════ Learning Materials ══════════════
    class LearningMaterial {
        -id : String
        -title : String
        -description : String
        -content : Object
        -type : MaterialType
        -difficulty : Difficulty
        -tags : StringArray
        -isPublished : Boolean
        -createdAt : Date
        -updatedAt : Date
    }
    class LearningProgress {
        -id : String
        -userId : String
        -materialId : String
        -progress : Int
        -completed : Boolean
        -lastAccess : Date
        -createdAt : Date
        -updatedAt : Date
    }
    class MaterialType {
        <<enumeration>>
        LESSON
        VOCABULARY
        GRAMMAR
        PRACTICE
        VIDEO
        AUDIO
    }
    LearningMaterial "1" -- "0..*" LearningProgress
    LearningMaterial ..> MaterialType

    %% ══════════════ Vocab Lab (Flashcards) ══════════════
    class Deck {
        -id : String
        -userId : String
        -name : String
        -createdAt : Date
        -updatedAt : Date
    }
    class Flashcard {
        -id : String
        -deckId : String
        -front : String
        -back : String
        -tags : StringArray
        -due : Date
        -stability : Float
        -difficulty : Float
        -elapsedDays : Int
        -scheduledDays : Int
        -reps : Int
        -lapses : Int
        -lastReview : Date
        -nextReviewDate : Date
        -cardState : CardState
        -cardTypeId : String
        -fieldValues : Object
        -fieldStyles : Object
        -cardStyle : Object
        -createdAt : Date
        -updatedAt : Date
    }
    class FlashcardReview {
        -id : String
        -flashcardId : String
        -rating : Int
        -reviewedAt : Date
        -scheduledDays : Int
        -elapsedDays : Int
        -state : CardState
    }
    class CardType {
        -id : String
        -userId : String
        -name : String
        -description : String
        -isBuiltIn : Boolean
        -createdAt : Date
        -updatedAt : Date
    }
    class CardTypeField {
        -id : String
        -cardTypeId : String
        -name : String
        -order : Int
        -description : String
        -fieldType : String
        -createdAt : Date
    }
    class CardTemplate {
        -id : String
        -cardTypeId : String
        -name : String
        -frontFields : StringArray
        -backFields : StringArray
        -fieldStyles : Object
        -cardStyle : Object
        -createdAt : Date
    }
    class SharedDeck {
        -id : String
        -publisherId : String
        -name : String
        -description : String
        -tags : StringArray
        -lexonPayload : Object
        -importCount : Int
        -createdAt : Date
        -updatedAt : Date
    }
    class CardState {
        <<enumeration>>
        NEW
        LEARNING
        REVIEW
        RELEARNING
    }
    Deck "1" -- "0..*" Flashcard
    CardType "1" -- "0..1" Flashcard
    Flashcard "1" -- "0..*" FlashcardReview
    CardType "1" -- "0..*" CardTypeField
    CardType "1" -- "0..*" CardTemplate
    Flashcard ..> CardState
    FlashcardReview ..> CardState

    %% ══════════════ Question Notes ══════════════
    class QuestionNote {
        -id : String
        -userId : String
        -examId : String
        -questionNumber : Int
        -noteText : String
        -createdAt : Date
        -updatedAt : Date
    }

    %% ══════════════ Shadowing ══════════════
    class ShadowingVideo {
        -id : String
        -userId : String
        -title : String
        -youtubeVideoId : String
        -audioUrl : String
        -imageUrl : String
        -tags : StringArray
        -folder : String
        -category : String
        -duration : String
        -sentences : Object
        -status : String
        -createdAt : Date
        -updatedAt : Date
    }
    class ShadowingFolder {
        -id : String
        -userId : String
        -name : String
        -order : Int
    }
    class ShadowingProgress {
        -id : String
        -userId : String
        -lessonId : String
        -completedSentences : IntArray
        -createdAt : Date
        -updatedAt : Date
    }

    %% ══════════════ Dictation ══════════════
    class DictationVideo {
        -id : String
        -userId : String
        -title : String
        -youtubeVideoId : String
        -audioUrl : String
        -imageUrl : String
        -tags : StringArray
        -folder : String
        -category : String
        -duration : String
        -sentences : Object
        -status : String
        -createdAt : Date
        -updatedAt : Date
    }
    class DictationFolder {
        -id : String
        -userId : String
        -name : String
        -order : Int
    }
    class DictationProgress {
        -id : String
        -userId : String
        -lessonId : String
        -completedSentences : IntArray
        -difficulty : String
        -createdAt : Date
        -updatedAt : Date
    }

    %% ══════════════ Community & Social ══════════════
    class Post {
        -id : String
        -authorId : String
        -type : PostType
        -title : String
        -body : String
        -imageUrls : StringArray
        -tags : StringArray
        -metadata : Object
        -likeCount : Int
        -commentCount : Int
        -bookmarkCount : Int
        -isPinned : Boolean
        -isHidden : Boolean
        -createdAt : Date
        -updatedAt : Date
    }
    class Comment {
        -id : String
        -postId : String
        -authorId : String
        -parentId : String
        -body : String
        -isHidden : Boolean
        -createdAt : Date
        -updatedAt : Date
    }
    class PostLike {
        -id : String
        -postId : String
        -userId : String
        -createdAt : Date
    }
    class PostBookmark {
        -id : String
        -postId : String
        -userId : String
        -createdAt : Date
    }
    class PostType {
        <<enumeration>>
        STUDY_TIP
        SCORE_ACHIEVEMENT
        GENERAL
    }
    Post "1" -- "0..*" Comment
    Comment "1" -- "0..1" Comment
    Post "1" -- "0..*" PostLike
    Post "1" -- "0..*" PostBookmark
    Post ..> PostType

    %% ══════════════ Gamification ══════════════
    class Achievement {
        -id : String
        -key : String
        -name : String
        -description : String
        -icon : String
        -category : String
        -tier : Int
        -xpReward : Int
        -order : Int
        -createdAt : Date
    }
    class UserAchievement {
        -id : String
        -userId : String
        -achievementId : String
        -earnedAt : Date
    }
    class XpLog {
        -id : String
        -userId : String
        -amount : Int
        -reason : String
        -createdAt : Date
    }
    Achievement "1" -- "0..*" UserAchievement

    %% ══════════════ Notifications & Links ══════════════
    class Notification {
        -id : String
        -userId : String
        -type : NotificationType
        -title : String
        -body : String
        -icon : String
        -thumbnail : String
        -link : String
        -isRead : Boolean
        -createdAt : Date
    }
    class StudentTeacherLink {
        -id : String
        -studentId : String
        -teacherId : String
        -status : String
        -createdAt : Date
        -updatedAt : Date
    }
    class NotificationType {
        <<enumeration>>
        STREAK_MILESTONE
        LESSON_COMPLETED
        REVIEW_DUE
        DECK_MASTERED
        EXAM_GRADED
        NEW_EXAM_AVAILABLE
        DICTATION_COMPLETE
        NEW_LESSON
        SYSTEM_ANNOUNCEMENT
        ACHIEVEMENT
    }
    Notification ..> NotificationType

    %% ══════════════ Subscription & Billing ══════════════
    class Subscription {
        -id : String
        -userId : String
        -tier : SubscriptionTier
        -status : SubscriptionStatus
        -provider : PaymentProvider
        -providerSubId : String
        -currentPeriodStart : Date
        -currentPeriodEnd : Date
        -canceledAt : Date
        -trialEndsAt : Date
        -trialUsed : Boolean
        -createdAt : Date
        -updatedAt : Date
    }
    class Payment {
        -id : String
        -subscriptionId : String
        -amount : Int
        -currency : String
        -provider : PaymentProvider
        -providerPayId : String
        -status : String
        -metadata : Object
        -createdAt : Date
    }
    class UsageRecord {
        -id : String
        -subscriptionId : String
        -feature : String
        -count : Int
        -periodStart : Date
        -periodEnd : Date
        -createdAt : Date
        -updatedAt : Date
    }
    class PricingPlan {
        -id : String
        -tier : SubscriptionTier
        -name : String
        -description : String
        -priceAmount : Int
        -currency : String
        -interval : String
        -intervalCount : Int
        -features : Object
        -isActive : Boolean
        -order : Int
        -createdAt : Date
        -updatedAt : Date
    }
    class SubscriptionTier {
        <<enumeration>>
        FREE
        PREMIUM
        PRO
    }
    class SubscriptionStatus {
        <<enumeration>>
        ACTIVE
        TRIALING
        PAST_DUE
        CANCELED
        EXPIRED
    }
    class PaymentProvider {
        <<enumeration>>
        MOCK // Thesis demo — simulated payments
        VNPAY // VNPay payment gateway
        STRIPE // Future — real payment processing
        MANUAL // Admin-granted subscriptions
    }
    Subscription "1" -- "0..*" Payment
    Subscription "1" -- "0..*" UsageRecord
    Subscription ..> SubscriptionTier
    Subscription ..> SubscriptionStatus
    Subscription ..> PaymentProvider
    Payment ..> PaymentProvider
    PricingPlan ..> SubscriptionTier

    %% ══════════════ Cross-Group Relationships ══════════════
    User "1" -- "0..*" ExamSession
    User "1" -- "0..*" Result
    User "1" -- "0..*" LearningProgress
    User "1" -- "0..*" Deck
    User "1" -- "0..*" SharedDeck
    User "1" -- "0..*" QuestionNote
    User "1" -- "0..1" ShadowingVideo
    User "1" -- "0..*" ShadowingFolder
    User "1" -- "0..*" ShadowingProgress
    User "1" -- "0..1" DictationVideo
    User "1" -- "0..*" DictationFolder
    User "1" -- "0..*" DictationProgress
    User "1" -- "0..*" StudentTeacherLink
    User "1" -- "0..*" StudentTeacherLink
    User "1" -- "0..*" Notification
    User "1" -- "0..*" UserAchievement
    User "1" -- "0..*" XpLog
    User "1" -- "0..*" Post
    User "1" -- "0..*" Comment
    User "1" -- "0..*" PostLike
    User "1" -- "0..*" PostBookmark
    User "1" -- "0..*" Subscription
    User "1" -- "0..*" ExamSession
    User "1" -- "0..*" Result
    User "1" -- "0..*" LearningProgress
    User "1" -- "0..*" Deck
    User "1" -- "0..*" SharedDeck
    User "1" -- "0..*" QuestionNote
    User "1" -- "0..1" ShadowingVideo
    User "1" -- "0..*" ShadowingFolder
    User "1" -- "0..*" ShadowingProgress
    User "1" -- "0..1" DictationVideo
    User "1" -- "0..*" DictationFolder
    User "1" -- "0..*" DictationProgress
    User "1" -- "0..*" Post
    User "1" -- "0..*" Comment
    User "1" -- "0..*" PostLike
    User "1" -- "0..*" PostBookmark
    User "1" -- "0..*" UserAchievement
    User "1" -- "0..*" XpLog
    User "1" -- "0..*" StudentTeacherLink
    User "1" -- "0..*" StudentTeacherLink
    User "1" -- "0..*" Notification
    User "1" -- "0..*" Subscription
    LearningMaterial ..> Difficulty
    LearningMaterial ..> Difficulty
